WIP, start to build web and DB integrations

--- a/templates/base.html
+++ b/templates/base.html
@@ -7,7 +7,7 @@
 
   {% block title %}
   {% endblock title %}
-  
+
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -139,7 +139,7 @@
         <li class="nav-item dropdown pe-3">
 
           <a class="nav-link nav-profile d-flex align-items-center pe-0" href="#" data-bs-toggle="dropdown">
-            <img src="assets/img/profile-img.jpg" alt="Profile" class="rounded-circle">
+            <img src="assets/img/profile.jpg" alt="Profile" class="rounded-circle">
             <span class="d-none d-md-block dropdown-toggle ps-2">K. Anderson</span>
           </a><!-- End Profile Iamge Icon -->
 
@@ -186,11 +186,25 @@
       </li><!-- End Devices Page Nav -->
 
       <li class="nav-item">
-        <a class="nav-link collapsed" href="/setup">
+        <a class="nav-link collapsed" href="/users">
           <i class="bi bi-person"></i>
-          <span>Setup</span>
+          <span>Users</span>
         </a>
-      </li><!-- End Setup Page Nav -->
+      </li><!-- End Users Page Nav -->
+
+      <li class="nav-item">
+        <a class="nav-link collapsed" href="/history">
+          <i class="bi bi-person"></i>
+          <span>Admin History</span>
+        </a>
+      </li><!-- End History Page Nav -->
+
+      <li class="nav-item">
+        <a class="nav-link collapsed" href="/tutorial">
+          <i class="bi bi-person"></i>
+          <span>Tutorial</span>
+        </a>
+      </li><!-- End Tutorial Page Nav -->
 
     </ul>
 
@@ -202,7 +216,7 @@
   <!-- ======= Footer ======= -->
   <footer id="footer" class="footer">
     <div class="copyright">
-      &copy; Copyright <strong><span>Tonleh</span></strong>. All Rights Reserved
+      &copy; Copyright <strong><span>Tonleh</span></strong>.
     </div>
   </footer><!-- End Footer -->
 
