adding in the code to create and login users

--- a/templates/auth_signup.html
+++ b/templates/auth_signup.html
@@ -9,7 +9,7 @@
    <h5 class="card-title text-center pb-0 fs-4">Create an admin Account</h5>
    <p class="text-center small">Enter your personal details to create account</p>
 </div>
-<form class="row g-3 needs-validation" novalidate>
+<form class="row g-3 needs-validation" action="/signup.do" method="post" novalidate>
    <div class="col-12">
       <label for="yourUsername" class="form-label">Username</label>
       <div class="input-group has-validation">
@@ -17,11 +17,6 @@
          <input type="text" name="username" class="form-control" id="yourUsername" required>
          <div class="invalid-feedback">Please choose a username.</div>
       </div>
-   </div>
-   <div class="col-12">
-      <label for="yourPassword" class="form-label">Password</label>
-      <input type="password" name="password" class="form-control" id="yourPassword" required>
-      <div class="invalid-feedback">Please enter your password!</div>
    </div>
    <div class="col-12">
       <button class="btn btn-primary w-100" type="submit">Create Account</button>
