--- a/templates/auth_login.html
+++ b/templates/auth_login.html
@@ -8,8 +8,15 @@
 <div class="pt-4 pb-2">
    <h5 class="card-title text-center pb-0 fs-4">Login to Your Admin Account</h5>
    <p class="text-center small">Enter your username & password to login</p>
+   {% if msg_alert %}
+   <div class="alert alert-danger alert-dismissible fade show" role="alert">
+      <i class="bi bi-exclamation-octagon me-1"></i>
+      {{ msg_alert }}
+      <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+   </div>
+   {% endif %}
 </div>
-<form class="row g-3 needs-validation" novalidate>
+<form class="row g-3 needs-validation" action="/login.do" method="post" novalidate>
    <div class="col-12">
       <label for="yourUsername" class="form-label">Username</label>
       <div class="input-group has-validation">
@@ -17,11 +24,6 @@
          <input type="text" name="username" class="form-control" id="yourUsername" required>
          <div class="invalid-feedback">Please enter your username.</div>
       </div>
-   </div>
-   <div class="col-12">
-      <label for="yourPassword" class="form-label">Password</label>
-      <input type="password" name="password" class="form-control" id="yourPassword" required>
-      <div class="invalid-feedback">Please enter your password!</div>
    </div>
    <div class="col-12">
       <button class="btn btn-primary w-100" type="submit">Login</button>
